-issue#3559: When a developer uses backtracing, HTML output can be seen from command line
-issue#3560: When using `input_validate_xxx`, calls to `die_html_input_error()` do not pass variable name
-feature#1214: Move Tree Create/Remove/Modify Functions to lib/api_tree.php
-feature#1523: Value above RRD maximum value
-feature#2437: Create system-wide Proxy settings for plugins
-feature#2474: Enable better version reporting for GitHub/Source/Package editions
-feature#2550: Enable use of authenticator codes for Two-Factor Authentication
-feature#2607: Allow adding sites from command line
-feature#2767: Plugins should be temporarily disabled if a required plugin is also disabled
-feature#3139: Added option in CLI tool remove_graphs for deletion of single graph
-feature#3187: Feature: rra path should be configurable
-feature#3260: When a device is added, populate the created date/time
-feature#3513: Add hooks for plugins to show customize graph source and customize template url
-feature#3558: Allow copy_user cli script to set various additional fields
-feature#3584: Verify passwords against Pwned databases using API
-feature#3585: CLI script to show database permissions that Cacti has
-feature#3568; Allow exclusion of snmp fields / value(s) when adding graphs via CLI
-feature#3677: Relocate the delete button for collectors to the edit page
-feature#3679: Allow searching logs by name, not just id
-feature#3724: Create Spikekill method to kill values over an absolute maximum
-feature#3725: Create the ability for Spikekill to modify only certain DSes within an RRD
-feature#3738: Ability to see MySQL permissions associated with current database user
-feature#3740: Ability to disable a site
-feature#3417: Add worst poller hosts to support page, log and email warning when poller time reached defined threshold
-feature#3845: Allow non-standard Remote Agent port to be used
-feature#3943: Add hooks for plugins to show customize graph source and customize template url (List View)